--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
-h1{
-    color: blueviolet;
+body{
+    direction: rtl;
+    text-align: right;
+}
+.container{
+    width: 900px;
+    margin: auto;
+    border: 1px solid;
+}
+.flex-container{
+    display: flex;
+}
+.cube{
+    position: relative;
+}
+.content{
+    position: absolute;
+
+}
+header{
+    border: 1px solid;
 }
