--- a/style.css
+++ b/style.css
@@ -6,21 +6,30 @@ body{
 .container{
     width: 900px;
     margin: auto;
-    border: 1px solid;
+    border: 1px solid purple;
 }
 .flex-container{
     display: flex;
     justify-content: space-evenly;
+    position: relative;
+top:10px;
 }
 
-.menu{
+.top-menu{
     color: white;
     padding: 5px;
     text-decoration: none;
 }
 
+.top-menu:hover{
+    color: blue;
+    text-decoration-line: underline;
+
+    }
+    
 
 ul{
+    /* margin-bottom:0px; */
     list-style-type: none;
 }
 
@@ -28,6 +37,21 @@ ul{
     position: absolute;
     display: none;
 }
+
+.paz-logo{
+    position: absolute; 
+    border: 2px solid; 
+    width: 370px;
+    text-align: end;
+ }
+ button{
+     position: relative;
+    top: 15px;
+    right: 850px;
+    border: 1px solid;
+ }
+
+ 
 .inner-menu>a{
     display: block;
     color: #fff;
@@ -35,7 +59,7 @@ ul{
     font-weight: bold;
     text-decoration: none;
     padding: 5px;
-    /* border: 1px solid; */
+    border: 1px solid;
     background-color: #999;
 }
 
@@ -49,20 +73,19 @@ li:hover >.inner-menu
     display: block;
 }
 
-
 .inner-menu>a:hover{
-color: blue;
+    color: blue;
 background-color: #aaa;
 text-decoration-line: underline;
 }
 
-.cube{
+/* .cube{
     position: relative;
 }
 .content{
     position: absolute;
 
-}
+} */
 header{
     border: 1px solid;
     background-color: #aaa;
