--- a/style.css
+++ b/style.css
@@ -8,16 +8,31 @@ body{
     margin: auto;
     border: 1px solid purple;
 }
+
+.flex-container-search{
+display: flex;
+justify-content:flex-end;
+}
+.flex-container-search>a{
+    color: white;
+    text-decoration: none;
+    padding: 5px;
+  
+}
+.flex-container-search>a:hover{
+    color: blue;
+    text-decoration-line: underline;
+
+
+}
 .flex-container{
     display: flex;
     justify-content: space-evenly;
-    position: relative;
-top:10px;
+    top:10px;
 }
 
 .top-menu{
     color: white;
-    padding: 5px;
     text-decoration: none;
 }
 
@@ -27,9 +42,7 @@ top:10px;
 
     }
     
-
 ul{
-    /* margin-bottom:0px; */
     list-style-type: none;
 }
 
@@ -38,39 +51,20 @@ ul{
     display: none;
 }
 
-.paz-logo{
-    position: absolute; 
-    border: 2px solid; 
-    width: 370px;
-    text-align: end;
- }
- button{
-     position: relative;
-    top: 15px;
-    right: 850px;
-    border: 1px solid;
- }
+li:hover >.inner-menu
+  {
+    display: block;
+}
 
- 
 .inner-menu>a{
     display: block;
     color: #fff;
     font-size: 15px;
     font-weight: bold;
     text-decoration: none;
+    margin-left: 80px;
     padding: 5px;
-    border: 1px solid;
     background-color: #999;
-}
-
-/* .divisions:hover > .inner-menu ,
-.about:hover > .inner-menu,
-.corporate-responsibility:hover > .inner-menu,
-.Investor-relations:hover > .inner-menu */
-
-li:hover >.inner-menu
-  {
-    display: block;
 }
 
 .inner-menu>a:hover{
@@ -78,6 +72,30 @@ li:hover >.inner-menu
 background-color: #aaa;
 text-decoration-line: underline;
 }
+
+.paz-logo{
+    position: absolute; 
+    /* border: 2px solid;  */
+    width: 370px;
+    text-align: end;
+ }
+
+ button{
+     padding: 0px;
+ }
+
+ /* .search{
+     margin: 0px 650px;
+ }  */
+
+ 
+
+/* .divisions:hover > .inner-menu ,
+.about:hover > .inner-menu,
+.corporate-responsibility:hover > .inner-menu,
+.Investor-relations:hover > .inner-menu */
+
+
 
 /* .cube{
     position: relative;
@@ -87,6 +105,7 @@ text-decoration-line: underline;
 
 } */
 header{
+    padding-top:20px; 
     border: 1px solid;
     background-color: #aaa;
 }
