--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body{
+    margin: 0px;
     direction: rtl;
     text-align: right;
     font-family: Arial, Helvetica, sans-serif
@@ -6,7 +7,7 @@ body{
 .container{
     width: 900px;
     margin: auto;
-    border: 1px solid purple;
+    /* border: 1px solid purple; */
 }
 
 .flex-container-search{
@@ -22,9 +23,13 @@ justify-content:flex-end;
 .flex-container-search>a:hover{
     color: blue;
     text-decoration-line: underline;
-
-
 }
+
+.flex-container-footer{
+    display: flex;
+    justify-content: space-evenly; 
+}
+
 .flex-container{
     display: flex;
     justify-content: space-evenly;
@@ -34,9 +39,21 @@ justify-content:flex-end;
 .top-menu{
     color: white;
     text-decoration: none;
+    font-weight: bold;
+
 }
 
-.top-menu:hover{
+
+
+
+.footer-menu{
+    color: green;
+    text-decoration: none;
+    font-size: 14px;
+
+}
+
+.futter-menu:hover, .top-menu:hover{
     color: blue;
     text-decoration-line: underline;
 
@@ -98,7 +115,6 @@ text-decoration-line: underline;
 
 
 /* .cube{
-    position: relative;
 }
 .content{
     position: absolute;
@@ -106,6 +122,11 @@ text-decoration-line: underline;
 } */
 header{
     padding-top:20px; 
-    border: 1px solid;
-    background-color: #aaa;
+    background-color: rgb(170, 170, 170);
+}
+footer{
+    background-color: grey;
+    /* position: fixed; */
+    bottom: 0px;
+
 }
