--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body{
     margin: auto;
     margin-top: 20px;
     border: 3px solid purple;
-    /* position: relative; */
 }
 
 
@@ -18,7 +17,7 @@ body{
 display: flex;
 justify-content:flex-end;
 }
-.flex-container-search>a{
+.flex-container-search>a{ 
     color: white;
     text-decoration: none;
     padding: 5px;
@@ -30,18 +29,16 @@ justify-content:flex-end;
 }
 
 
-.flex-container{
+.flex-container{ /*top-menu*/
     display: flex;
     justify-content: space-evenly;
-    top:10px;
+    border: 1px solid
 }
 
-.top-menu{
+.top-menu{  
     color: white;
     text-decoration: none;
     font-weight: bold;
-    position: relative;
-
 }
 
 
@@ -60,13 +57,14 @@ justify-content:flex-end;
     text-decoration-line: underline;
     }
     
-ul{
-    list-style-type: none;
-}
 
 .inner-menu{
     position: absolute;
     display: none;
+}
+
+ul{
+    list-style-type: none;
 }
 
 li:hover >.inner-menu
@@ -100,33 +98,9 @@ text-decoration-line: underline;
      padding: 0px;
  }
 
-.pos{
-    position: absolute;
-    bottom:0px;
-}
-.pos2{
-    position: absolute;
-    bottom:0px;
-    left: 330px;
-}
-
-.pos3{
-    position: absolute;
-    bottom:0px;
-    left:35px;
-}
-
- .content{
-    margin-right: 15px;
-    position: relative;
-    border: 1px solid;
-    width: 250px;
-    bottom:0;
-}
-
-header{
-    padding-top:20px; 
+ header{
     background-color: rgb(144, 144, 144);
+border: 1px solid;
 }
 
 footer{
@@ -134,16 +108,47 @@ footer{
     position: fixed;
     bottom: 0px;
 }
-.content>a,p{
+
+/* ---------------------------------------------------------------------------------- */
+
+.flex-container-main-photo{
+    display: flex;
+    justify-content: space-evenly;
+    /* border: 2px solid red; */
+
+}
+
+.cube{
+    position: relative;
+    width: 293PX;
+    height: 355PX;
+}
+
+.content{
+    margin-right: 10px;
+    background-image: url("images/hp_tab_text_bg.png");
+    background-repeat: no-repeat;
+        position: absolute;  
+    bottom:5px;
+
+}
+
+h5,a{
+    margin: 0px;
+    color: white;
+    font-size: 13px;
+}
+
+a{
+    float: left;
+
+}
+p{
+margin: 0px;
+    text-align: center;
+    max-width: 248px;
     font-size: 13px;
     color: white;
-    max-width: 230px;
 }
-.text-on-pic{
-    position: absolute;
-    top: 0px;
-}
-span{
-    font-size: 14px;
-    font-weight: bold;
-}
+
+
