--- a/style.css
+++ b/style.css
@@ -32,13 +32,15 @@ justify-content:flex-end;
 .flex-container{ /*top-menu*/
     display: flex;
     justify-content: space-evenly;
-    border: 1px solid
+    border: 1px solid blue;
+    margin-bottom: 0px;
 }
 
 .top-menu{  
-    color: white;
+    color: #fff;
     text-decoration: none;
     font-weight: bold;
+    font-size: 15px;
 }
 
 
@@ -61,6 +63,7 @@ justify-content:flex-end;
 .inner-menu{
     position: absolute;
     display: none;
+    /* bottom: 5px; */
 }
 
 ul{
@@ -70,6 +73,7 @@ ul{
 li:hover >.inner-menu
   {
     display: block;
+    z-index: 1;
 }
 
 .inner-menu>a{
@@ -92,7 +96,9 @@ text-decoration-line: underline;
     position: absolute; 
     width: 370px;
     text-align: end;
- }
+    bottom: 835px;
+    left: 1200px;
+ } 
 
  button{
      padding: 0px;
@@ -107,6 +113,7 @@ footer{
     background-color: #999;
     position: fixed;
     bottom: 0px;
+    width: 100%;
 }
 
 /* ---------------------------------------------------------------------------------- */
@@ -122,6 +129,7 @@ footer{
     position: relative;
     width: 293PX;
     height: 355PX;
+    /* border-bottom-right-radius: 25px; */
 }
 
 .content{
@@ -133,22 +141,29 @@ footer{
 
 }
 
-h5,a{
+.content>h5,a{
     margin: 0px;
     color: white;
     font-size: 13px;
 }
 
-a{
+.content>a{
     float: left;
 
 }
-p{
+.content>p{
 margin: 0px;
     text-align: center;
     max-width: 248px;
     font-size: 13px;
     color: white;
+}
+
+.flex-container-main-small-photo{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 20px;
+   
 }
 
 
