--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body{
     width: 900px;
     margin: auto;
     margin-top: 20px;
-    border: 3px solid purple;
 }
 
 
@@ -32,7 +31,6 @@ justify-content:flex-end;
 .flex-container{ /*top-menu*/
     display: flex;
     justify-content: space-evenly;
-    border: 1px solid blue;
     margin-bottom: 0px;
 }
 
@@ -92,12 +90,10 @@ background-color: rgb(188, 188, 188);
 text-decoration-line: underline;
 }
 
-.paz-logo{
+#paz-logo{
     position: absolute; 
-    width: 370px;
-    text-align: end;
-    /* bottom: px;
-    left: 12px; */
+    top:15px;
+    right: 260px;
  } 
 
  button{
