--- a/style.css
+++ b/style.css
@@ -119,7 +119,6 @@ footer{
 .flex-container-main-photo{
     display: flex;
     justify-content: space-evenly;
-    /* border: 2px solid red; */
 
 }
 
@@ -127,7 +126,7 @@ footer{
     position: relative;
     width: 293PX;
     height: 355PX;
-    /* border-bottom-right-radius: 25px; */
+    /* border-radius: 0px 0px 30px 5px; */
 }
 
 .content{
