--- a/style.css
+++ b/style.css
@@ -1,4 +1,16 @@
 *{box-sizing: border-box}
+
+.radius{
+    
+    border-bottom-right-radius: 15px;
+
+}
+.cube, .cube2{
+    margin-left: 12px;
+}
+
+
+
 body{
     margin: 0px;
     direction: rtl;
@@ -21,6 +33,7 @@ padding: 10px;
     color: white;
     text-decoration: none;
     padding: 5px;
+  
   
 }
 .flex-container-search>a:hover{
@@ -57,6 +70,7 @@ input[type=search] {
 
 .f-menu{
     text-align: center;
+    font-weight: bold;
 }
 
 .footer-menu:hover, .top-menu:hover{
@@ -68,7 +82,6 @@ input[type=search] {
 .inner-menu{
     position: absolute;
     display: none;
-    /* bottom: 5px; */
 }
 
 ul{
@@ -108,7 +121,6 @@ text-decoration-line: underline;
     }
 
  header{
-    /* background-color: rgb(144, 144, 144); */
     background-image: linear-gradient(to bottom, rgb(144, 144, 144) , rgb(180, 180, 180));
     height: 105px;
     margin-bottom: 30px;
@@ -123,6 +135,10 @@ footer{
     height: 38px;
 
 }
+.footer-menu-red{
+    color:red;
+    text-decoration: none;
+}
 
 /* ---------------------------------------------------------------------------------- */
 
@@ -136,7 +152,6 @@ footer{
     position: relative;
     width: 293PX;
     height: 355PX;
-    /* border-radius: 0px 0px 30px 5px; */
 }
 
 .content{
@@ -169,7 +184,7 @@ margin: 0px;
 .flex-container-main-small-photo{
     display: flex;
     justify-content: space-evenly;
-    margin-top: 20px;
+    margin: 30px 0px 60px;
    
 }
 
