--- a/style.css
+++ b/style.css
@@ -140,6 +140,7 @@ footer{
     text-decoration: none;
 }
 
+
 /* ---------------------------------------------------------------------------------- */
 
 .flex-container-main-photo{
@@ -154,7 +155,7 @@ footer{
     height: 355PX;
 }
 
-.content{
+.content1{
     margin-right: 10px;
     background-image: url("images/hp_tab_text_bg.png");
     background-repeat: no-repeat;
@@ -163,17 +164,17 @@ footer{
 
 }
 
-.content>h5,a{
+.content1>h5,.content1>a{
     margin: 0px;
     color: white;
     font-size: 13px;
 }
 
-.content>a{
+.content1>a{
     float: left;
 
 }
-.content>p{
+.content1>p{
 margin: 0px;
     text-align: center;
     max-width: 248px;
@@ -244,5 +245,74 @@ width: 250px;
 
   }
 
+/* --------- form -------------------------------------------------------------------------------- */
 
+.flex-container{
+    display: flex;
+    justify-content: space-evenly;
+}
+/* .container1{
+    width: 300px;
+}
+.container2{
+    width: 760px;
+}
+.container3{
+    width: 460px;
+} */
 
+/* form*/
+form {
+    max-width: 383px;
+    height: 356px;
+    background-image: url("images/contact_form_bg.png");
+    padding: 10px;
+
+}
+
+    .flex-form  {
+        display: flex;
+        font-size: 12px;
+    }
+      
+    .flex-form>label  {
+        margin: 3px;
+        width: 100px;
+    }
+    .flex-form>input{
+        margin: 3px;
+        width:200px;
+    }
+    #comment{
+        width: 300px;
+    }
+    button{
+        /* float:left; */
+text-align: center;
+margin-right: 262px;
+color: white;
+background-color: rgb(0, 92, 160);
+    }
+form>h5{
+    max-width: 300px;
+}
+form>p{
+    font-size: 12px;
+}
+h1{text-decoration: underline;
+}
+
+.container1{
+    border: 3px solid;
+    width: 200px;
+}
+
+.container2{
+    width: 400px;
+    border: 3px solid;
+}
+
+.container3{
+    width: 300px;
+    border: 3px solid;
+}
