--- a/style.css
+++ b/style.css
@@ -201,7 +201,6 @@ float: left;
         position: relative;
         width: 292PX;
         height: 216PX;
-        /* border-bottom-right-radius: 25px; */
     }
     
     .content2{
@@ -247,21 +246,31 @@ width: 250px;
 
 /* --------- form -------------------------------------------------------------------------------- */
 
-.flex-container{
+.flex-container-contact{
     display: flex;
     justify-content: space-evenly;
 }
-/* .container1{
-    width: 300px;
+.flex-container-contact h3{
+color: #005ca0;
+font-size: 15px;
 }
-.container2{
-    width: 760px;
-}
-.container3{
-    width: 460px;
-} */
+.flex-container-contact p{
+    font-size: 13px;
+    color: #72716d;
+margin-block-start: 0px;
+margin-block-end: 0px;
 
-/* form*/
+}
+.flex-container-contact a{
+    font-size: 13px;
+    text-decoration: none;
+    color: blue;
+}
+.flex-container-contact a:hover{
+text-decoration: underline;
+color: #005ca0;
+}
+
 form {
     max-width: 383px;
     height: 356px;
@@ -284,10 +293,9 @@ form {
         width:200px;
     }
     #comment{
-        width: 300px;
+        width: 309px;
     }
     button{
-        /* float:left; */
 text-align: center;
 margin-right: 262px;
 color: white;
@@ -295,24 +303,39 @@ background-color: rgb(0, 92, 160);
     }
 form>h5{
     max-width: 300px;
+
 }
 form>p{
     font-size: 12px;
 }
-h1{text-decoration: underline;
+.container2>h1{text-decoration: underline;
 }
 
 .container1{
-    border: 3px solid;
-    width: 200px;
+    width: 100px;
 }
 
 .container2{
-    width: 400px;
-    border: 3px solid;
+    width: 500px;
+    margin-right: 10px;
+
 }
 
 .container3{
     width: 300px;
-    border: 3px solid;
+    margin-right: 80px;
+    margin-top: 60px ;
+
+}
+.content3{
+    margin-bottom: 20px;
+    width: 292px;
+    height: 169px;
+    background-image: url("images/cube_bg.png");
+  padding: 5px;
+}
+#title{
+    color: #72716d;
+    padding: 2px;
+    border-bottom: 1px solid #bbb;
 }
