--- a/style.css
+++ b/style.css
@@ -116,9 +116,6 @@ text-decoration-line: underline;
     right: 260px;
  } 
 
- button{
-    background-color: #C6CDD0
-    }
 
  header{
     background-image: linear-gradient(to bottom, rgb(144, 144, 144) , rgb(180, 180, 180));
@@ -261,7 +258,7 @@ margin-block-start: 0px;
 margin-block-end: 0px;
 
 }
-.flex-container-contact a{
+.flex-container-contact .content3 a{
     font-size: 13px;
     text-decoration: none;
     color: blue;
@@ -295,11 +292,12 @@ form {
     #comment{
         width: 309px;
     }
-    button{
+   .container2>form>.row>button{
 text-align: center;
-margin-right: 262px;
+margin-left: 52px;
 color: white;
-background-color: rgb(0, 92, 160);
+background-color:#005CA0;
+float: left;
     }
 form>h5{
     max-width: 300px;
@@ -313,6 +311,7 @@ form>p{
 
 .container1{
     width: 100px;
+    border: solid;
 }
 
 .container2{
@@ -339,3 +338,19 @@ form>p{
     padding: 2px;
     border-bottom: 1px solid #bbb;
 }
+.container2>span,.container2>a {
+    font-size:12px;
+    color: #5c5c5c;
+    text-decoration: none;
+}
+.container1>a{
+    font-size:13px;
+    color: #5c5c5c;
+    text-decoration: none;
+
+}
+.container1> button{
+    width: 90px;
+    height: 30px;
+    
+    }
